# mercator

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  QA_CHECKLIST.md  README.md  active_orgs.sql  package.json  pull_request_template.md
cosmos/: .dockerignore  .gitignore  README.md  area_keys.lua  conftest.py  create_categories_table_sql.py  foo.ipynb  justfile  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
cosmos/app/: db.py  dependencies.py  main.py  parser.py  schemas.py
cosmos/app/cli/: create_openapi.py
cosmos/app/core/: config.py  datatypes.py  graphhopper.py  jinja_utils.py
cosmos/app/crud/: entity_resolve.py  executors.py  osm_search.py
cosmos/app/data/: feature_classes.json  feature_classes.py  presets.json  presets.py
cosmos/app/gateways/: geo_route.py  isochrone.py  routes.py
cosmos/app/models/: intent.py  intents.yaml
cosmos/app/parsers/: categories.py  dist.py  entity_resolvers.py  exceptions.py  intents.py  regex.py  rules.py  time.py
cosmos/app/parsers/openai_icsf/: __init__.py  openai_intent_classifier.py  openai_slot_fill.py  openai_slot_parser.py
cosmos/app/routes/: autocomplete.py  osm.py  voyager.py
cosmos/cli/: db.py  main.py
cosmos/cosmos-frontend/: openapi-config.ts  package-lock.json  package.json
cosmos/cosmos-frontend/pages/: _app.tsx  index.tsx
cosmos/cosmos-frontend/pages/components/: error-bar.tsx  footer.tsx  header.tsx  layer-card-bar.tsx  search-suggestions.tsx  store.ts  voyager-app.tsx
cosmos/cosmos-frontend/pages/components/analysis-view/: index.tsx
cosmos/cosmos-frontend/pages/components/bars/: announcement-bar.tsx  error-bar.tsx  intent-bar.tsx  style-bar.tsx
cosmos/cosmos-frontend/pages/components/buttons/: cancel-button.tsx
cosmos/cosmos-frontend/pages/components/context-helpers/: context-provider-nest.tsx
cosmos/cosmos-frontend/pages/components/geomap/: blend.ts  context.tsx  geomap.tsx
cosmos/cosmos-frontend/pages/components/headers/: header.tsx  small-header.tsx
cosmos/cosmos-frontend/pages/components/icons/: caret.tsx
cosmos/cosmos-frontend/src/: README.md
cosmos/cosmos-frontend/src/contexts/: analysis-context.tsx
cosmos/cosmos-frontend/src/lib/: add-new-layer.tsx  collections.ts  colors.ts  entity-resolver.ts  geo-utils.ts  intents.tsx  rendering-utils.ts  str.ts
cosmos/cosmos-frontend/src/search/: search-slice.ts
cosmos/cosmos-frontend/src/shapes/: shape-slice.ts
cosmos/cosmos-frontend/src/store/: empty-api.ts  search-api.ts  store.ts
cosmos/cosmos-frontend/styles/: globals.css
cosmos/data/: spatial_feature_types_lexicon.json
cosmos/intents/: cli.py  db.py  entity_resolvers.py  executors.py  graphhopper.py  intent.py  intent_classifier.py  intents.yaml  parsers.py
cosmos/intents/templates/: openai-slot-extractor.j2
cosmos/notebooks/: 2022-11-15-jrnold.ipynb  2022-11-16-jrnold.ipynb  2022-11-17-jrnold.ipynb  2022-11-18-jrnold.ipynb  2022-11-24.ipynb  2022-11-27.ipynb  Nominatim-eval-2022-12-06.ipynb  generate_osm_lua.ipynb  id-preset-data.ipynb  parsed_sents.yml  questions.txt  search-plus-vis.ipynb
cosmos/notebooks/generate-autocomplete/: Generate Autocomplete.ipynb
cosmos/osm-docker/: docker-compose.yml  osm-postgresql.conf  style.lua
cosmos/osm-docker/docker-entrypoint-initdb.d/: 10_postgis.sh  30_post-import.sql  41_cardinal_direction.sql  42_create_function_to_geojson_feature.sql  43_create_function_to_geojson_feature_collection.sql  43_create_function_to_json_feature_collection.sql  50_trgm.sql  60_add_categories.sql  61_add_human_readable_names.sql  70_add_external_storage.sql  90_analyze.sql  cleaned_categories.dsv
cosmos/osm-docker/zcta-db/: extractor.py  zcta.sh
cosmos/resources/: autocomplete
cosmos/sql/: create-intersection-functions.sql  create_function_asgeojsonfeaturecollection.sql  create_function_to_geojson_feature.sql
cosmos/test/: conftest.py  test_query_route.py  test_routes.py
cosmos/test/app/: test_categories.py  test_presets.py
cosmos/test/app/core/: test_jinja_utils.py
cosmos/test/app/crud/: test_executors.py
cosmos/test/app/models/: test_intent.py
cosmos/test/parsers/: test_dist.py  test_rules.py  test_time.py
geox-api/py-geolift/: .dockerignore  .gitignore  Makefile  README.md  dependencies.R  pyproject.toml
geox-api/py-geolift/notebooks/: PyGeoLiftWalkThrough.ipynb  scratch.ipynb
geox-api/py-geolift/pygeolift/: __init__.py  augsynth.py  geolift.py  rpy2_utils.py
geox-api/py-geolift/pygeolift/data/: __init__.py
geox-api/py-geolift/scripts/: create-data.R
nlp/geoquestions201/: geoqa201.ipynb  geoqa201.json  pyproject.toml
osm/: .coverage  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  hypercorn.toml  justfile  pyproject.toml
osm/app/: db.py  dependencies.py  main.py  parser.py  schemas.py
osm/app/core/: config.py  datatypes.py
osm/app/routes/: osm.py
osm/docker-entrypoint-initdb.d/: 20_load-osm.sh
osm/notebooks/: requirements.txt
osm/osm-docker/: Dockerfile  custom.lua  docker-compose.yml  generic.lua  osm-postgres.conf  osm-postgresql.conf  style.lua
osm/osm-docker/docker-entrypoint-initdb.d/: 15_update-max-wal-size.sql  20_load-osm.sh  30_post-import.sql
osm/sql/: create_function_to_json_feature_collection.sql
py-geolift/: .gitignore  pyproject.toml
py-geolift/notebooks/: PyGeoLiftWalkThrough.ipynb
py-geolift/pygeolift/: __init__.py  augsynth.py  geolift.py  rpy2_utils.py
py-geolift/pygeolift/data/: __init__.py
snowflake/: 01_geofencer_exports.sql  README.md  justfile  pyproject.toml
snowflake/mercator_snowflake/: create_geofencer_dev_share.py  create_geofencer_shares.py  geofencer_export.sql  migrate.py  utils.py
snowflake/mercator_snowflake/sql/: 2022-11-15-1142-add_namespaces.sql.j2  2022-11-29-1329-remove_deleted_at.sql.j2  geofencer_share_dev.sql.j2  geofencer_shares.sql.j2
snowflake/sql/: 10_geofencer_etl_role.sql  2022-09-15-s3_int.sql  2022-09-21-geofencer_etl_role.sql  2022-09-23-swimply-export.sql  2022-09-23-swimply-exports-2.sql  2022-09-27_snowpipe_sns_integration.sql  2022-10-13-11-37-00-s3_int_dev.sql
(+1109 files in other folders)
