[tool.poetry]
name = "mercator-snowflake"
version = "0.1.0"
description = "Misc tools for interacting with Mercator's snowflake"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mercator_snowflake"}]

[tool.poetry.dependencies]
python = "3.9.*"
SQLAlchemy = "^1.4.41"
typer = "^0.6.1"
snowflake-sqlalchemy = "^1.4.1"
Jinja2 = "^3.1.2"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
