[tool.poetry]
name = "pygeolift"
version = "0.1.0"
description = "Python wrapper for the GeoLift R package"
authors = ["Jeffrey Arnold <jeffrey.arnold@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mercatorhq/mercator/tree/master/geox-api/py-geolift"

[tool.poetry.dependencies]
python = "^3.9"
rpy2 = {version = "^3.5.2", extras = ["all"]}
pandera = "^0.11.0"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
jupyterlab = "^3.4.3"
black = {version = "^22.3.0", extras = ["jupyter"]}
ipython = "^8.4.0"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
