[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Jeffrey Arnold <jeffrey@mercator.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
jupyterlab = "^3.5.0"
pandas = "^1.5.1"
aiohttp = "^3.8.3"
ipykernel = "^6.16.2"
lxml = "^4.9.1"
cssselect = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
